--- a/Home.html
+++ b/Home.html
@@ -5,7 +5,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
-  <title>首页</title>
+  <title>南京辽渡信息科技有限公司</title>
   <link rel="stylesheet" href="css/bootstrap.min.css">
   <script src="js/jquery.min.js"></script>
   <script src="js/bootstrap.min.js"></script>
@@ -15,41 +15,42 @@
 <body>
   <!-- 导航 -->
   <header class="container-fluid p-0">
-    <nav class="navbar navbar-expand-md navbar-light bg-light container-fluid px-0 py-3 mx-0">
-      <div class=" col text-center"><img class="navbar-brand m-0" href="#" style="width:150px;"
-          src="img/web/logo.png"></img></div>
-      <button class="navbar-toggler mr-2" type="button" data-toggle="collapse" data-target="#navbarNavDropdown"
-        aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
-        <span class="navbar-toggler-icon"></span>
-      </button>
-      <div class="col-md-8">
-        <div class="collapse navbar-collapse justify-content-md-center" id="navbarNavDropdown">
-          <ul class="navbar-nav d-flex justify-content-between w-100 pr-5">
-            <li class="nav-item active">
+    <div class="container p-0">
+      <nav class="navbar navbar-expand-lg navbar-light">
+        <a class="navbar-brand m-0" href="#">
+          <img src="img/web/logo.png" style="width:150px"></img>
+        </a>
+        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavDropdown"
+          aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
+          <span class="navbar-toggler-icon"></span>
+        </button>
+        <div class="collapse navbar-collapse " id="navbarNavDropdown">
+          <ul class="navbar-nav ml-auto">
+            <li class="nav-item active px-2">
               <a class="nav-link" href="#">首页<span class="sr-only">(current)</span></a>
             </li>
-            <li class="nav-item">
+            <li class="nav-item px-2">
               <a class="nav-link" href="#">关于我们</a>
             </li>
-            <li class="nav-item">
+            <li class="nav-item px-2">
               <a class="nav-link" href="#">公司产品</a>
             </li>
-            <li class="nav-item">
+            <li class="nav-item px-2">
               <a class="nav-link" href="#">成功案例</a>
             </li>
-            <li class="nav-item">
+            <li class="nav-item px-2">
               <a class="nav-link" href="#">合作伙伴</a>
             </li>
-            <li class="nav-item">
+            <li class="nav-item px-2">
               <a class="nav-link" href="#">新闻中心</a>
             </li>
-            <li class="nav-item">
+            <li class="nav-item px-2">
               <a class="nav-link" href="#">联系我们</a>
             </li>
           </ul>
         </div>
-      </div>
-    </nav>
+      </nav>
+    </div>
   </header>
 
   <!-- 轮播 -->
