取消新闻中心 页面串联

--- a/About-Us.html
+++ b/About-Us.html
@@ -42,9 +42,9 @@
             <li class="nav-item px-2">
               <a class="nav-link" href="Cooper-Parter.html">合作伙伴</a>
             </li>
-            <li class="nav-item px-2">
+            <!-- <li class="nav-item px-2">
               <a class="nav-link" href="News-Center.html">新闻中心</a>
-            </li>
+            </li> -->
             <li class="nav-item px-2">
               <a class="nav-link" href="Content-Us.html">联系我们</a>
             </li>
