--- a/Home.html
+++ b/Home.html
@@ -219,7 +219,7 @@
   </section>
 
   <!-- 新闻中心 -->
-  <section id="home_infor">
+  <!-- <section id="home_infor">
     <div class="container-fluid mt-5 mb-md-5">
       <div class="container text-center mt-5 p-md-5">
         <h3 class="title-CN">新闻中心</h3>
@@ -319,7 +319,7 @@
 
       </div>
     </div>
-  </section>
+  </section> -->
 
   <!-- 页尾 -->
   <footer class="container-fluid mt-5">
