取消新闻中心

--- a/Home.html
+++ b/Home.html
@@ -44,9 +44,6 @@
               <a class="nav-link" href="Cooper-Parter.html">合作伙伴</a>
             </li>
             <li class="nav-item px-2">
-              <a class="nav-link" href="News-Center.html">新闻中心</a>
-            </li>
-            <li class="nav-item px-2">
               <a class="nav-link" href="Content-Us.html">联系我们</a>
             </li>
           </ul>
@@ -100,7 +97,7 @@
               监管仓、保税仓经营权，道路运输经营权，进出口贸易经营权等，经营范围涵盖全
               程物流供应链服务。并且同时经营广州状元谷与深圳前海电商仓配服务.
             </p>
-            <a href="#" class="btn btn-danger mb-3">查看更多</a>
+            <a href="About-Us.html" class="btn btn-danger mb-3">查看更多</a>
           </div>
           <div class="col-md-4">
             <img src="img/web/about-us.png" class="img-responsive w-100 " alt="">
