--- a/About-Us.html
+++ b/About-Us.html
@@ -60,7 +60,7 @@
       <ol class="breadcrumb pl-md-5">
         <li class="breadcrumb-item"><a href="#">主页</a></li>
         <li class="breadcrumb-item"><a href="#">关于我们</a></li>
-        <li class="breadcrumb-item active" aria-current="page">公司简介</li>
+        <!-- <li class="breadcrumb-item active" aria-current="page">公司简介</li> -->
       </ol>
     </nav>
   </div>
@@ -101,53 +101,64 @@
               <p class="about-subtitle">CORE TEAM</p>
               <div class="text-left about-content pt-2">
                 <div class="row p-0">
-                  <div class="col-12 col-lg-4 about-team-member">
-                    <img src="img/web/about-team-member01.png" alt="">
+                  <div class="col-12 col-lg-4 pb-3 about-team-member">
+                    <img src="img/web/about-team-member01.png" alt="" class="w-100 img-responsive">
                     <h3>洪剑方</h3>
-                    <p>CEO/总经理</p>
+                    <h6 class="text-muted">CEO/总经理</h6>
                     <div>
-                      个人介绍个人介绍个人介绍个人介绍个人介绍个人介绍个人介绍个人介绍个人介绍个人介绍个人介绍个人介绍个人介绍个人介绍个人介绍个人介绍个人介绍个人介绍个人介绍个人介绍个人介绍个人介绍个人介绍个人介绍。
-                    </div>
+                      洪剑方,辽渡科技总经理/CEO。 </div>
                   </div>
-                  <div class="col-12 col-lg-4 about-team-member">
-                    <img src="img/web/about-team-member02.png" alt="">
+                  <div class="col-12 col-lg-4 pb-3 about-team-member">
+                    <img src="img/web/about-team-member02.png" alt="" class="w-100 img-responsive">
                     <h3>耿云龙</h3>
-                    <p>CMO/</p>
+                    <h6 class="text-muted">CMO/</h6>
                     <div>
-                      个人介绍个人介绍个人介绍个人介绍个人介绍个人介绍个人介绍个人介绍个人介绍个人介绍个人介绍个人介绍个人介绍个人介绍个人介绍个人介绍个人介绍个人介绍个人介绍个人介绍个人介绍个人介绍个人介绍个人介绍。
+                      耿云龙,辽渡科技市场总监。
                     </div>
                   </div>
-                  <div class="col-12 col-lg-4 about-team-member">
-                    <img src="img/web/about-team-member03.png" alt="">
+                  <div class="col-12 col-lg-4 pb-3 about-team-member">
+                    <img src="img/web/about-team-member03.png" alt="" class="w-100 img-responsive">
                     <h3>姓名</h3>
-                    <p>营销经理</p>
+                    <h6 class="text-muted">营销经理</h6>
                     <div>
-                      个人介绍个人介绍个人介绍个人介绍个人介绍个人介绍个人介绍个人介绍个人介绍个人介绍个人介绍个人介绍个人介绍个人介绍个人介绍个人介绍个人介绍个人介绍个人介绍个人介绍个人介绍个人介绍个人介绍个人介绍。
+                      蒋宝军,辽渡科技的技术总监。
+
                     </div>
                   </div>
 
-                  <div class="col-12 col-lg-4 about-team-member">
-                    <img src="img/web/about-team-member01.png" alt="">
+                  <div class="col-12 col-lg-4 pb-3 about-team-member">
+                    <img src="img/web/about-team-member04.png" alt="" class="w-100 img-responsive">
                     <h3>姓名</h3>
-                    <p>营销经理</p>
+                    <h6 class="text-muted">教授 公管部门总监 专家顾问
+
+                    </h6>
                     <div>
-                      个人介绍个人介绍个人介绍个人介绍个人介绍个人介绍个人介绍个人介绍个人介绍个人介绍个人介绍个人介绍个人介绍个人介绍个人介绍个人介绍个人介绍个人介绍个人介绍个人介绍个人介绍个人介绍个人介绍个人介绍。
+                      南京审计大学公共关系管理教授，辽渡科技公共关系管理部门总监，创始团队成员，产品专家级顾问
+
                     </div>
                   </div>
-                  <div class="col-12 col-lg-4 about-team-member">
-                    <img src="img/web/about-team-member02.png" alt="">
+                  <div class="col-12 col-lg-4 pb-3 about-team-member">
+                    <img src="img/web/about-team-member05.png" alt="" class="w-100 img-responsive">
                     <h3>姓名</h3>
-                    <p>营销经理</p>
+                    <h6 class="text-muted">营销经理</h6>
                     <div>
-                      个人介绍个人介绍个人介绍个人介绍个人介绍个人介绍个人介绍个人介绍个人介绍个人介绍个人介绍个人介绍个人介绍个人介绍个人介绍个人介绍个人介绍个人介绍个人介绍个人介绍个人介绍个人介绍个人介绍个人介绍。
+                      洪剑华,辽渡科技运营总监。
                     </div>
                   </div>
-                  <div class="col-12 col-lg-4 about-team-member">
-                    <img src="img/web/about-team-member03.png" alt="">
+                  <div class="col-12 col-lg-4 pb-3 about-team-member">
+                    <img src="img/web/about-team-member06.png" alt="" class="w-100 img-responsive">
                     <h3>姓名</h3>
-                    <p>营销经理</p>
+                    <h6 class="text-muted">营销经理</h6>
                     <div>
-                      个人介绍个人介绍个人介绍个人介绍个人介绍个人介绍个人介绍个人介绍个人介绍个人介绍个人介绍个人介绍个人介绍个人介绍个人介绍个人介绍个人介绍个人介绍个人介绍个人介绍个人介绍个人介绍个人介绍个人介绍。
+                      张曼玲,辽渡科技运营经理。
+                    </div>
+                  </div>
+                  <div class="col-12 col-lg-4 pb-3 about-team-member">
+                    <img src="img/web/about-team-member07.png" alt="" class="w-100 img-responsive">
+                    <h3>姓名</h3>
+                    <h6 class="text-muted">市场经理</h6>
+                    <div>
+                      杨飞飞,辽渡科技市场经理。
                     </div>
                   </div>
                 </div>
