--- a/Company-Pro.html
+++ b/Company-Pro.html
@@ -60,7 +60,7 @@
       <ol class="breadcrumb pl-md-5">
         <li class="breadcrumb-item"><a href="#">主页</a></li>
         <li class="breadcrumb-item"><a href="#">公司产品</a></li>
-        <li class="breadcrumb-item active" aria-current="page">智慧社区</li>
+        <!-- <li class="breadcrumb-item active" aria-current="page">智慧社区</li> -->
       </ol>
     </nav>
   </div>
