--- a/Home.html
+++ b/Home.html
@@ -61,13 +61,13 @@
     </ul>
     <div class="carousel-inner">
       <div class="carousel-item active">
-        <img class="d-block w-100" src="img/web/banner.png" alt="First slide">
+        <img class="d-block w-100" src="img/web/banner1.png" alt="First slide">
       </div>
       <div class="carousel-item">
-        <img class="d-block w-100" src="img/web/banner.png" alt="Second slide">
+        <img class="d-block w-100" src="img/web/banner2.png" alt="Second slide">
       </div>
       <div class="carousel-item">
-        <img class="d-block w-100" src="img/web/banner.png" alt="Third slide">
+        <img class="d-block w-100" src="img/web/banner3.png" alt="Third slide">
       </div>
     </div>
     <a class="carousel-control-prev" href="#carouselExampleControls" role="button" data-slide="prev">
@@ -117,26 +117,26 @@
       </div>
       <div class="container pt-xl-5">
         <div class="row mt-2 text-center">
-          <div class="col-md-3 col-6 product-item pt-4">
+          <a class="col-md-3 col-6 product-item pt-4" href="Company-Pro.html">
             <h3 class="product-title ">智慧社区</h3>
             <img src="img/web/product-shequ.png" alt="">
             <p class="product-p text-left py-md-4">物业服务平台，社区o2o系统平台，一站式服务，利用新一代信息技术，为居民提供安全、舒适、便利的生活环境。</p>
-          </div>
-          <div class="col-md-3 col-6 item-active pt-4">
+          </a>
+          <a class="col-md-3 col-6 product-item pt-4" href="Company-Pro.html">
             <h3 class="product-title ">智慧民政</h3>
             <img src="img/web/product-minzheng.png" alt="">
             <p class="product-p text-left py-md-4">利用大数据、云计算等新技术，整合数据资源，建设综合信息管理平台，统筹推进民政业务工作。</p>
-          </div>
-          <div class="col-md-3 col-6 product-item pt-4">
+          </a>
+          <a class="col-md-3 col-6 product-item pt-4" href="Company-Pro.html">
             <h3 class="product-title ">智慧党建</h3>
             <img src="img/web/product-dangjian.png" alt="">
             <p class="product-p text-left py-md-4">碎片化学习、系统性认知、社交化管理、精细化服务。党的建设全流程信息化，一体化党务解决方案</p>
-          </div>
-          <div class="col-md-3 col-6 product-item pt-4">
+          </a>
+          <a class="col-md-3 col-6 product-item pt-4" href="Company-Pro.html">
             <h3 class="product-title ">智慧养老</h3>
             <img src="img/web/product-older.png" alt="">
             <p class="product-p text-left py-md-4">面向居家老人、社区及养老机构传感网系统与信息平台，提供实时、快捷、高效、低成本的，物联化、互联化、智能化的养老服务。</p>
-          </div>
+          </a>
         </div>
       </div>
     </div>
@@ -155,27 +155,29 @@
         </p>
       </div>
       <div class="container">
-        <div class="row main-case-show ">
-          <figure class="col-md-3 mb-2 figure">
-            <img src="img/web/main-case-show01.png" class="figure-img img-fluid rounded-top mb-0" alt="">
-            <figcaption class="figure-caption">宝塔桥街道</figcaption>
+        <div class="row main-case-show">
+          <figure class="col-md-4 mb-2  figure">
+            <div class="">
+              <img src="img/web/main-case-show01.png" class="figure-img img-fluid rounded-top mb-0" alt="">
+              <figcaption class="figure-caption">宝塔桥街道</figcaption>
+            </div>
           </figure>
-          <figure class="col-md-3 mb-2 figure">
-            <img src="img/web/main-case-show01.png" class="figure-img img-fluid rounded-top mb-0" alt="">
-            <figcaption class="figure-caption">宝塔桥街道</figcaption>
+          <figure class="col-md-4 mb-2  figure">
+            <div class="">
+              <img src="img/web/main-case-show02.png" class="figure-img img-fluid rounded-top mb-0" alt="">
+              <figcaption class="figure-caption">新街口街道</figcaption>
+            </div>
           </figure>
-          <figure class="col-md-3 mb-2 figure">
-            <img src="img/web/main-case-show01.png" class="figure-img img-fluid rounded-top mb-0" alt="">
-            <figcaption class="figure-caption">宝塔桥街道</figcaption>
-          </figure>
-          <figure class="col-md-3 mb-2 figure">
-            <img src="img/web/main-case-show01.png" class="figure-img img-fluid rounded-top mb-0" alt="">
-            <figcaption class="figure-caption">宝塔桥街道</figcaption>
+          <figure class="col-md-4 mb-2  figure">
+            <div class="">
+              <img src="img/web/main-case-show03.png" class="figure-img img-fluid rounded-top mb-0" alt="">
+              <figcaption class="figure-caption">江北新区</figcaption>
+            </div>
           </figure>
         </div>
       </div>
-      <div class="container text-center mt-3">
-        <a href="#" class="btn btn-outline-info btn-lg">查看更多</a>
+      <div class="container text-center mt-5">
+        <a href="Sucess-Case.html" class="btn btn-outline-danger btn-lg">查看更多</a>
       </div>
     </div>
   </section>
